# jc-libavif-sys

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MAINTAINING.md  README.md  THIRD_PARTY.md  build.rs
.github/workflows/: ci.yml  prebuilt.yml  release.yml
include/: wrapper.h
scripts/: package-prebuilt.sh
src/: bindings.rs  lib.rs
tests/: hdr_roundtrip.rs
tests/fixtures/: README.md
upstream/: versions.toml
xtask/: Cargo.toml
xtask/src/: main.rs
